add script to download CLEVR dataset

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -11,12 +11,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc2d99e",
+   "id": "78cfad84",
    "metadata": {},
    "outputs": [],
    "source": [
     "! pip install -r requirements.txt\n",
     "! download_monet_model.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5182c225",
+   "metadata": {},
+   "source": [
+    "If you wish to use the CLEVR dataset, you can download it with this cell. Note that this can take a long time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec29d69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! download_clevr.sh"
    ]
   },
   {
@@ -449,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ee1430",
+   "id": "a9101a07",
    "metadata": {},
    "outputs": [],
    "source": []
