--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78cfad84",
+   "id": "e7a87401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5182c225",
+   "id": "b216f767",
    "metadata": {},
    "source": [
     "If you wish to use the CLEVR dataset, you can download it with this cell. Note that this can take a long time."
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cec29d69",
+   "id": "dd1f35c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,11 @@
     "        # Hyperparameters\n",
     "        iterations = model.training_hp['iterations']\n",
     "        batch_size = model.training_hp['batch_size']\n",
-    "        lr = model.training_hp['lr']\n",
+    "        if type(model.training_hp['lr']) is dict:\n",
+    "            hp_tag = dataset_name + '_' + str(representation)\n",
+    "            lr = model.training_hp['lr'][hp_tag]\n",
+    "        else:\n",
+    "            lr = model.training_hp['lr']\n",
     "\n",
     "        # Training set dataloader\n",
     "        trainloader = torch.utils.data.DataLoader(dataset(isTrain=True), batch_size=N)\n",
@@ -323,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "8e76296d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dce751e71714e9abfb64a173f6cf617",
+       "model_id": "bfc97a982b2e45738b2355e69022ec86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,12 +389,13 @@
     "    \n",
     "    # Percentage of properly retrieved patterns, the threshold value is arbitrary, but we found\n",
     "    # that it provides a good discrimination between succesful and failed memory retrievals\n",
-    "    percs.append(100*torch.sum(dists < 1)/dists.shape[0])\n"
+    "    thresh = 5 if representation else 2\n",
+    "    percs.append(100*torch.sum(dists < thresh)/dists.shape[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "d0b52f82",
    "metadata": {},
    "outputs": [
@@ -398,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieval rate : 55.55555725097656\n"
+      "Retrieval rate : 58.88888931274414\n"
      ]
     }
    ],
@@ -409,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "40ae6d3c",
    "metadata": {
     "scrolled": false
@@ -432,8 +437,12 @@
     "fig = plt.figure(figsize=(4*3, 3*5))\n",
     "axes = fig.subplots(5, 4)\n",
     "\n",
-    "x_stored = vae_net.decode(M).detach()\n",
-    "x_pred = vae_net.decode(z).detach()\n",
+    "if representation:\n",
+    "    x_stored = vae_net.decode(M).detach()\n",
+    "    x_pred = vae_net.decode(z).detach()\n",
+    "else:\n",
+    "    x_stored = M.detach()\n",
+    "    x_pred = z.detach()\n",
     "\n",
     "if dataset_name=='CLEVR':\n",
     "    xc = renormalize(xc)\n",
@@ -467,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9101a07",
+   "id": "392204e2",
    "metadata": {},
    "outputs": [],
    "source": []
